# Siril-0.9

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
pixmaps/: siril_1_32x32.xpm
platform-specific/linux/: siril.desktop  siril.xml
po/: LINGUAS  POTFILES.in  ar_DZ.po  el.po  es_ES.po  fr.po  it_IT.po  nl_BE.po  tl_PH.po  zh_CN.po
src/: Makefile.am  PSF.c  PSF.h  PSF_list.c  PSF_list.h  atpmatch.c  atpmatch.h  callbacks.c  callbacks.h  colors.c  colors.h  command.c  compositing.c  conversion.c  conversion.h  demosaicing.c  demosaicing.h  fft.c  fft.h  films.c  films.h  gradient.c  gradient.h  gtk.css  histogram.c  histogram.h  image_format_fits.c  image_formats_internal.c  image_formats_libraries.c  io_wave.c  main.c  main_ser.c  match.c  match.h  misc.c  misc.h  opencv.cpp  opencv.h  pave.c  proto.h  (+24 more)
src/algos/: Def_Wavelet.h  PSF.c  colors.c  colors.h  cosmetic_correction.c  cosmetic_correction.h  demosaicing.c  fft.c  gradient.c  gradient.h  io_wave.c  pave.c  quality.c  quality.h  quantize.c  reconstr.c  star_finder.c  star_finder.h  statistics.c  transform.c
src/compositing/: align_rgb.c  align_rgb.h  compositing.c  filters.c
src/core/: command.c  command.h  initfile.c  initfile.h  processing.c  processing.h  proto.h  siril.c  siril.h  undo.c  utils.c
src/gui/: PSF_list.c  callbacks.c  callbacks.h  gtk.css  histogram.c  histogram.h  quality_plot.c  quality_plot.h  registration_preview.c  sequence_list.c  siril3.glade  statistics_list.c
src/io/: conversion.c  conversion.h  films.c  films.h  image_format_fits.c  image_formats_internal.c  image_formats_libraries.c  seqfile.c  sequence.c  ser.c  ser.h  single_image.c
src/io/avi_pipp/: pipp_avi_write.cpp
src/io/avi_pipp/.deps/: avi_writer.Po  pipp_avi_write.Po  pipp_avi_write_dib.Po  pipp_buffer.Po  pipp_utf8_linux.Po  pipp_utf8_osx.Po
src/opencv/: opencv.cpp  opencv.h
src/opencv/ecc/: ecc.cpp  ecc.h
src/registration/: registration.c  registration.h
src/registration/matching/: atpmatch.c  atpmatch.h  match.c  misc.h
src/stacking/: stacking.c  stacking.h
